# docs/swagger.json
@@ -18,6 +18,43 @@
                 }
             }
         },
+        "/update": {
+            "post": {
+                "description": "Обновляет метрику в хранилище через json обьект.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Обновляет метрику.",
+                "parameters": [
+                    {
+                        "description": "Данные в формате JSON",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Arcadian-Sky_musthave-metrics_internal_server_models.Metrics"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/update/{type}": {
             "post": {
                 "description": "Обновляет метрику в хранилище.",
@@ -126,6 +163,42 @@
                 }
             }
         },
+        "/value": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Получает метрики.",
+                "parameters": [
+                    {
+                        "description": "Данные в формате JSON",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Arcadian-Sky_musthave-metrics_internal_server_models.Metrics"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/value/{type}/{name}": {
             "get": {
                 "description": "Получает метрику в хранилище.",
@@ -153,6 +226,29 @@
                             "type": "string"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "github_com_Arcadian-Sky_musthave-metrics_internal_server_models.Metrics": {
+            "type": "object",
+            "properties": {
+                "delta": {
+                    "description": "значение метрики в случае передачи counter",
+                    "type": "integer"
+                },
+                "id": {
+                    "description": "имя метрики",
+                    "type": "string"
+                },
+                "type": {
+                    "description": "параметр, принимающий значение gauge или counter",
+                    "type": "string"
+                },
+                "value": {
+                    "description": "значение метрики в случае передачи gauge",
+                    "type": "number"
                 }
             }
         }
